-- Up to you — product cluster: circle, round, roll, audit trail
-- Generated by docs/diagrams/er_schema.py from pg_dump. Do not edit.
CREATE TABLE circle (
    id bigint NOT NULL,
    name text NOT NULL,
    created_at timestamp with time zone DEFAULT now() NOT NULL,
    PRIMARY KEY (id)
);
CREATE TABLE principal (
    id bigint NOT NULL,
    created_at timestamp with time zone DEFAULT now() NOT NULL,
    PRIMARY KEY (id)
);
CREATE TABLE member (
    id bigint NOT NULL,
    principal_id bigint NOT NULL,
    circle_id bigint NOT NULL,
    nickname text NOT NULL,
    joined_at timestamp with time zone DEFAULT now() NOT NULL,
    PRIMARY KEY (id),
    FOREIGN KEY (circle_id) REFERENCES circle(id),
    FOREIGN KEY (principal_id) REFERENCES principal(id)
);
CREATE TABLE device_secret (
    id bigint NOT NULL,
    principal_id bigint NOT NULL,
    secret_sha256 character(64) NOT NULL,
    created_at timestamp with time zone DEFAULT now() NOT NULL,
    PRIMARY KEY (id),
    FOREIGN KEY (principal_id) REFERENCES principal(id)
);
CREATE TABLE place (
    id bigint NOT NULL,
    origin text NOT NULL,
    circle_id bigint,
    name text,
    registry_no text,
    category text,
    category_model text,
    category_input text,
    PRIMARY KEY (id),
    FOREIGN KEY (circle_id) REFERENCES circle(id)
);
CREATE TABLE round (
    id bigint NOT NULL,
    circle_id bigint NOT NULL,
    target_hour timestamp with time zone NOT NULL,
    status text DEFAULT 'open'::text NOT NULL,
    winning_place_id bigint,
    closed_at timestamp with time zone,
    die1 smallint,
    die2 smallint,
    PRIMARY KEY (id),
    FOREIGN KEY (circle_id) REFERENCES circle(id),
    FOREIGN KEY (winning_place_id) REFERENCES place(id)
);
CREATE TABLE proposal (
    id bigint NOT NULL,
    round_id bigint NOT NULL,
    place_id bigint NOT NULL,
    member_id bigint,
    proposed_at timestamp with time zone DEFAULT now() NOT NULL,
    weight numeric,
    PRIMARY KEY (id),
    FOREIGN KEY (member_id) REFERENCES member(id),
    FOREIGN KEY (place_id) REFERENCES place(id),
    FOREIGN KEY (round_id) REFERENCES round(id)
);
CREATE TABLE weight_contribution (
    id bigint NOT NULL,
    round_id bigint NOT NULL,
    place_id bigint NOT NULL,
    channel text NOT NULL,
    contributor text NOT NULL,
    effect numeric(4,3) NOT NULL,
    reason_visibility text NOT NULL,
    member_id bigint,
    forecast_publication_id bigint,
    forecast_township_code text,
    forecast_element text,
    forecast_measure text,
    forecast_slot_start timestamp with time zone,
    observation_publication_id bigint,
    observation_station_id text,
    observation_element text,
    observation_observed_at timestamp with time zone,
    PRIMARY KEY (id),
    FOREIGN KEY (forecast_publication_id, forecast_township_code, forecast_element, forecast_measure, forecast_slot_start) REFERENCES forecast_reading(publication_id, township_code, element, measure, slot_start),
    FOREIGN KEY (member_id) REFERENCES member(id),
    FOREIGN KEY (observation_publication_id, observation_station_id, observation_element, observation_observed_at) REFERENCES observation_reading(publication_id, station_id, element, observed_at),
    FOREIGN KEY (round_id, place_id) REFERENCES proposal(round_id, place_id)
);
CREATE TABLE forecast_reading (
    publication_id bigint NOT NULL,
    element text NOT NULL,
    slot_start timestamp with time zone NOT NULL,
    measure text NOT NULL,
    value text NOT NULL,
    township_code text NOT NULL,
    PRIMARY KEY (publication_id, township_code, element, measure, slot_start)
);
CREATE TABLE observation_reading (
    publication_id bigint NOT NULL,
    station_id text NOT NULL,
    station_name text NOT NULL,
    observed_at timestamp with time zone NOT NULL,
    element text NOT NULL,
    value text,
    town_code text,
    PRIMARY KEY (publication_id, station_id, element, observed_at)
);
